fix moderations reference in activity feed, follow button on questions page on mobile fix, remove junk code

--- a/app/assets/stylesheets/questions.css.scss
+++ b/app/assets/stylesheets/questions.css.scss
@@ -192,13 +192,9 @@
 }
 
 #question {
-	/*margin-left: 0px !important;*/
 	margin: auto !important;
 	float: none !important;	
-	/*padding: 14px;*/
 	margin-top: 20px !important;
-	/*background: url(https://twimg0-a.akamaihd.net/a/1345161153/t1/img/wash-white-30.png);*/
-	/*padding: 100px 0px;*/
 
 	.conversation {
 		//min-height: 140px;
@@ -297,6 +293,8 @@
 			position: relative;
 			cursor: pointer;
 
+			@media (max-width:768px) { padding: 25px 25px; }
+
 			i, #activity_badge, #link_post {
 				position: absolute;
 				top: 10px;
@@ -338,6 +336,8 @@
 					top: 25px;
 					left: 40px;
 					height: 48px;
+
+					@media (max-width:768px) { left: 25px; }
 				}
 
 				.twi_link {
